Created .gitignore and added github repository to package.

--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "devDependencies":
     {
 	"jshint":"~2.9.5"
+    },
+    "repository":
+    {
+	"type": "git",
+	"url": "https://github.com/philipb/wrongulator.git"
     }
 }
