--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-    "name": "wrongulator",
-    "version": "0.0.1",
-    "description": "A service to tell you if you're wrong",
-    "license": "MIT",
-    "dependencies":
-    {
-	"express": "~4.15.3",
-	"body-parser": "~1.17.2"
-    },
-    "devDependencies":
-    {
-	"jshint":"~2.9.5"
-    },
-    "repository":
-    {
-	"type": "git",
-	"url": "https://github.com/philipb/wrongulator.git"
-    }
+   "name": "wrongulator",
+   "version": "0.0.1",
+   "description": "A service to tell you if you're wrong",
+   "license": "MIT",
+   "dependencies": {
+      "express": "~4.15.3",
+      "body-parser": "~1.17.2"
+   },
+   "devDependencies": {
+      "jshint": "~2.9.5"
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/philipb/wrongulator.git"
+   }
 }
