--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
    "name": "wrongulator",
-   "version": "0.0.1",
+   "version": "0.0.2",
    "description": "A service to tell you if you're wrong",
    "license": "MIT",
    "dependencies": {
       "express": "~4.15.3",
-      "body-parser": "~1.17.2"
+       "body-parser": "~1.17.2",
+       "pug": "~2.0.0-rc.4"
    },
    "devDependencies": {
       "jshint": "~2.9.5"
