--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
    "description": "A service to tell you if you're wrong",
    "license": "MIT",
    "dependencies": {
-      "express": "~4.15.3",
-       "body-parser": "~1.17.2",
-       "pug": "~2.0.0-rc.4"
+      "express": "^4.16.3",
+       "body-parser": "^1.18.3",
+       "pug": "^2.0.3"
    },
    "devDependencies": {
       "jshint": "~2.9.5"
