--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "pug": "^2.0.3"
    },
    "devDependencies": {
-      "jshint": "~2.9.5"
+      "jshint": "^2.12.0"
    },
    "repository": {
       "type": "git",
